<resources>
    <string name="app_name">Incidentes</string>
    <string name="selecione_um_servi_o_a_ser_utilizado">Selecione um serviço a ser utilizado:</string>
    <string name="cadastrar_atendente">Cadastrar Atendente</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="cadastrar_incidente">Cadastrar Incidente</string>
    <string name="listar_incidentes">Listar Incidentes</string>
    <string name="nome_do_atendente">Nome do Atendente:</string>
    <string name="cadastrar_atendente1">Cadastrar Atendente</string>
    <string name="cadastrar_cliente1">Cadastrar Cliente</string>
    <string name="nome_do_cliente">Nome do Cliente</string>
    <string name="empresa_do_cliente">Empresa do Cliente</string>
    <string name="id_do_atendente">Id do Atendente:</string>
    <string name="id_do_cliente">Id do Cliente</string>
    <string name="finalizado">Finalizado</string>
    <string name="aberto">Aberto</string>
    <string name="cad_incidente">Cadastrar Incidente</string>
    <string name="status">Status</string>
    <string name="descri_o_do_incidente">Descrição do Incidente</string>
    <string name="nome_do_cliente111">Nome do Cliente</string>
    <string name="nome_do_atendente111">Nome do Atendente</string>
    <string name="id_do_incidente">Id do Incidente</string>
</resources>
