<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/padding"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecione_um_servi_o_a_ser_utilizado"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_inicio"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/cadastrar_atendente"
        android:onClick="AbrirCadastrarAtendente"
        android:textColor="@color/text_color_inicio"
        android:background="@color/background1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top1"
        android:text="@string/cadastrar_cliente"
        android:onClick="AbrirCadastrarCliente"
        android:textColor="@color/text_color_inicio"
        android:background="@color/background1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top1"
        android:text="@string/cadastrar_incidente"
        android:onClick="AbrirCadastrarIncidente"
        android:textColor="@color/text_color_inicio"
        android:background="@color/background1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top1"
        android:text="@string/listar_incidentes"
        android:onClick="AbrirListarIncidentes"
        android:textColor="@color/text_color_inicio"
        android:background="@color/background1" />

</LinearLayout>