<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/Inser">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/id_do_incidente"
        android:id="@+id/textView3"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtIdIncidente"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome_do_atendente111"
        android:id="@+id/textView"
        android:layout_below="@+id/edtIdIncidente"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeAtendenteIncidente"
        android:layout_below="@+id/textView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome_do_cliente111"
        android:id="@+id/textView2"
        android:layout_below="@+id/edtNomeAtendenteIncidente"
        android:layout_marginTop="@dimen/margin_top1"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeClienteIncidente"
        android:layout_below="@+id/textView2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/descri_o_do_incidente"
        android:id="@+id/textView5"
        android:layout_below="@+id/edtNomeClienteIncidente"
        android:layout_marginTop="@dimen/margin_top1"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDescricaoIncidente"
        android:layout_below="@+id/textView5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status"
        android:id="@+id/textView6"
        android:layout_below="@+id/edtDescricaoIncidente"
        android:layout_marginTop="@dimen/margin_top1"
        android:textColor="@color/text_color_inicio"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView6"
        android:id="@+id/rdgStatus">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aberto"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color_inicio"
            android:id="@+id/rdbAberto"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalizado"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color_inicio"
            android:id="@+id/rdbFinalizado"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cad_incidente"
        android:id="@+id/btnCadIncidente"
        android:layout_below="@+id/rdgStatus"
        android:layout_marginTop="@dimen/margin_top1"
        android:onClick="CadastrarIncidente"
        android:textColor="@color/text_color_inicio"/>


</RelativeLayout>