<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/Inser">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/id_do_cliente"
        android:id="@+id/textView3"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtIdCliente"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome_do_cliente"
        android:id="@+id/textView"
        android:layout_below="@+id/edtIdCliente"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeCliente"
        android:layout_below="@+id/textView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empresa_do_cliente"
        android:id="@+id/textView2"
        android:layout_below="@+id/edtNomeCliente"
        android:layout_marginTop="@dimen/margin_top1"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEmpresaCliente"
        android:layout_below="@+id/textView2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_cliente1"
        android:id="@+id/btnCadCliente"
        android:layout_below="@+id/edtEmpresaCliente"
        android:layout_marginTop="@dimen/margin_top1"
        android:onClick="CadastrarCliente"
        android:textColor="@color/text_color_inicio"/>


</RelativeLayout>