<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/Inser">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/id_do_atendente"
        android:id="@+id/textView1"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtIdAtendente"
        android:layout_below="@+id/textView1"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome_do_atendente"
        android:id="@+id/textView"
        android:layout_below="@+id/edtIdAtendente"
        android:textColor="@color/text_color_inicio"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeAtendente"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_atendente1"
        android:id="@+id/btnCadAtendente"
        android:layout_below="@+id/edtNomeAtendente"
        android:layout_marginTop="@dimen/margin_top1"
        android:onClick="CadastrarAtendente"
        android:textColor="@color/text_color_inicio"/>


</RelativeLayout>